# PhD_framework

./: .gitignore  .pre-commit-config.yaml  CONTAINER.md  Dockerfile  FINETUNING.md  GEMINI.md  KNOWLEDGE_BASE.md  Makefile  README.md  RESEARCH_GUIDE.md  TESTING_GUIDE.md  example_run.py  hello.py  pyproject.toml  system_check.py  update_papers.py
.gemini/agents/: antagonic-researcher.md  behavioral-scientist.md  clinical-translator.md  coding-tasks.md  compression.md  data-ethicist.md  data-scientist.md  experiment-orchestrator.md  expert-statistician.md  literature-cleaner.md  literature-researcher.md  research-orchestrator.md  scientific-writer.md  senior-swe.md  wiki-maintainer.md
.github/workflows/: research-quality-ci.yml  trigger-sync.yml
papers/: RESEARCH_INDEX.md
papers/doshi-velez/: LAB_KNOWLEDGE_BASE.md  fischer_2025_clinician_expectations.md  futoma_2020_myth_of_generalisability.md  gottesman_2019_clinical_rl_guidelines.md  hang_2025_suicide_forecast_sparse_data.md  huyuk_2025_strategically_linked_decisions.md  jacobs_2021_antidepressant_bias.md  jacobs_2023_human_labeling_bias.md  jiang_2024_discount_regularization.md  lu_2026_neural_sdes_suicide_risk.md  parbhoo_2022_causal_ope.md  trella_2024_online_rl_fidelity.md
papers/uveitis/: LAB_KNOWLEDGE_BASE.md  agrawal_2025_oasis_uveitis_recurrence.md  haggag_2021_oct_vitreous_haze_grading.md  mahajan_2023_molecular_aging_proteomics.md  mohammadi_2026_uwf_inflammation_detection.md  umer_2025_toxoplasmosis_activity_yolo.md  (+2 more)
scripts/: utils.py
src/: container.py  pdf_processor.py  utils.py
(+153 files in other folders)
